// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When not authenticated Login Form renders a snapshot properly 1`] = `
<div>
  <h1
    className="title is-1"
  >
    Log In
  </h1>
  <hr />
  <br />
  <FormErrors
    formRules={
      Array [
        Object {
          "field": "email",
          "id": 1,
          "name": "Email is required.",
          "valid": false,
        },
        Object {
          "field": "password",
          "id": 2,
          "name": "Password is required.",
          "valid": false,
        },
      ]
    }
    formType="Login"
  />
  <form
    method="post"
    onSubmit={[Function]}
  >
    <div
      className="field"
    >
      <input
        className="input is-medium"
        name="email"
        onChange={[Function]}
        placeholder="Enter an email address"
        required={true}
        type="email"
        value=""
      />
    </div>
    <div
      className="field"
    >
      <input
        className="input is-medium"
        name="password"
        onChange={[Function]}
        placeholder="Enter a password"
        required={true}
        type="password"
        value=""
      />
    </div>
    <input
      className="button is-primary is-medium is-fullwidth"
      disabled={true}
      type="submit"
      value="Submit"
    />
  </form>
</div>
`;

exports[`When not authenticated Register Form renders a snapshot properly 1`] = `
<div>
  <h1
    className="title is-1"
  >
    Register
  </h1>
  <hr />
  <br />
  <FormErrors
    formRules={
      Array [
        Object {
          "field": "username",
          "id": 1,
          "name": "Username must be greater than 5 characters.",
          "valid": false,
        },
        Object {
          "field": "email",
          "id": 2,
          "name": "Email must be greater than 5 characters.",
          "valid": false,
        },
        Object {
          "field": "email",
          "id": 3,
          "name": "Email must be a valid email address.",
          "valid": false,
        },
        Object {
          "field": "password",
          "id": 4,
          "name": "Password must be greater than 10 characters.",
          "valid": false,
        },
      ]
    }
    formType="Register"
  />
  <form
    method="post"
    onSubmit={[Function]}
  >
    <div
      className="field"
    >
      <input
        className="input is-medium"
        name="username"
        onChange={[Function]}
        placeholder="Enter a username"
        required={true}
        type="text"
        value=""
      />
    </div>
    <div
      className="field"
    >
      <input
        className="input is-medium"
        name="email"
        onChange={[Function]}
        placeholder="Enter an email address"
        required={true}
        type="email"
        value=""
      />
    </div>
    <div
      className="field"
    >
      <input
        className="input is-medium"
        name="password"
        onChange={[Function]}
        placeholder="Enter a password"
        required={true}
        type="password"
        value=""
      />
    </div>
    <input
      className="button is-primary is-medium is-fullwidth"
      disabled={true}
      type="submit"
      value="Submit"
    />
  </form>
</div>
`;
